--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>ArtOverwatch - Full control. Full vision.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Art Overwatch - Full control. Full vision.</title>
     <meta name="description" content="A unified platform giving artists the operational power of a corporation. Complete oversight from idea incubation to IP protection, revenue tracking, and community ownership." />
     <link rel="icon" type="image/png" href="/generated_images/ArtOverwatch_app_icon_1f115011.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
